syntax = "proto3";

package canister_http_service.v1;

message HttpHeader {
  string name = 1;
  string value = 2;
}

message CanisterHttpSendRequest {
  string url = 1;
  bytes body = 2;
  repeated HttpHeader headers = 3;
}

message CanisterHttpSendResponse {
  uint32 status = 1;
  repeated HttpHeader headers = 2;
  bytes content = 3;
}

service CanisterHttpService {
    rpc CanisterHttpSend(CanisterHttpSendRequest) returns (CanisterHttpSendResponse);
}
